unpackaged/main/default/objects/simplesms__Number_Lookup_Result__c/simplesms__Number_Lookup_Result__c.object-meta.xml
<CustomObject>
    <label>Phone Number Lookup</label>
    <nameField>
        <displayFormat>PNL-{000}</displayFormat>
        <label>Number Lookup Result</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phone Number Lookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>