unpackaged/main/default/objects/simplesms__Number_Lookup_Result__c/fields/simplesms__Carrier_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Carrier_Error_Code__c</fullName>
    <label>Carrier Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>