unpackaged/main/default/objects/simplesms__Number_Lookup_Result__c/fields/simplesms__Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Carrier_Name__c</fullName>
    <label>Carrier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>