unpackaged/main/default/objects/simplesms__Number_Lookup_Result__c/fields/simplesms__Country_Code__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Country_Code__c</fullName>
    <label>Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>