unpackaged/main/default/objects/simplesms__Number_Lookup_Result__c/fields/simplesms__DoNotSMS__c.field-meta.xml
<CustomField>
    <fullName>simplesms__DoNotSMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not SMS</label>
    <type>Checkbox</type>
</CustomField>