unpackaged/main/default/objects/simplesms__Number_Lookup_Result__c/fields/simplesms__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>