unpackaged/main/default/objects/simplesms__Number_Lookup_Result__c/fields/simplesms__Job_Id__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Job_Id__c</fullName>
    <label>Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>