unpackaged/main/default/objects/simplesms__Number_Lookup_Result__c/fields/simplesms__Last_Lookup_Date__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Last_Lookup_Date__c</fullName>
    <label>Last Lookup Date</label>
    <type>Date</type>
</CustomField>