unpackaged/main/default/objects/simplesms__Number_Lookup_Result__c/fields/simplesms__Lookup_Pending__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Lookup_Pending__c</fullName>
    <formula>IF ( OR ( ISPICKVAL(simplesms__Status__c, &#39;Bad Number&#39;), ISPICKVAL(simplesms__Status__c, &#39;Failure&#39;) ), FALSE,
OR(ISNULL( simplesms__Expiration_Date__c ), simplesms__Expiration_Date__c &lt; TODAY() ) )</formula>
    <label>Lookup Pending</label>
    <type>Checkbox</type>
</CustomField>