unpackaged/main/default/objects/simplesms__Number_Lookup_Result__c/fields/simplesms__National_Format__c.field-meta.xml
<CustomField>
    <fullName>simplesms__National_Format__c</fullName>
    <label>National Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>