unpackaged/main/default/objects/simplesms__Number_Lookup_Result__c/fields/simplesms__Number_Type__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Number_Type__c</fullName>
    <label>Number Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>landline</fullName>
            </value>
            <value>
                <fullName>mobile</fullName>
            </value>
            <value>
                <fullName>voip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>