unpackaged/main/default/objects/simplesms__Number_Lookup_Result__c/fields/simplesms__Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Phone_Number__c</fullName>
    <externalId>true</externalId>
    <label>Phone Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>