unpackaged/main/default/objects/simplesms__Number_Lookup_Result__c/fields/simplesms__Status__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Status__c</fullName>
    <defaultValue>&#39;New&#39;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>Bad Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>