unpackaged/main/default/objects/simplesms__Number_Lookup_Result__c/listViews/simplesms__All_Lookups.listView-meta.xml
<ListView>
    <fullName>simplesms__All_Lookups</fullName>
    <columns>NAME</columns>
    <columns>simplesms__Phone_Number__c</columns>
    <columns>simplesms__Status__c</columns>
    <columns>simplesms__Carrier_Name__c</columns>
    <columns>simplesms__Number_Type__c</columns>
    <columns>simplesms__Country_Code__c</columns>
    <columns>simplesms__DoNotSMS__c</columns>
    <columns>simplesms__Expiration_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Lookups</label>
</ListView>