unpackaged/main/default/objects/simplesms__Number_Lookup_Result__c/listViews/simplesms__Bad_Numbers.listView-meta.xml
<ListView>
    <fullName>simplesms__Bad_Numbers</fullName>
    <columns>NAME</columns>
    <columns>simplesms__Phone_Number__c</columns>
    <columns>simplesms__Status__c</columns>
    <columns>simplesms__Last_Lookup_Date__c</columns>
    <columns>simplesms__Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>simplesms__Status__c</field>
        <operation>equals</operation>
        <value>Bad Number</value>
    </filters>
    <label>Bad Numbers</label>
</ListView>