unpackaged/main/default/objects/simplesms__Number_Lookup_Result__c/listViews/simplesms__Number_Lookup_Success.listView-meta.xml
<ListView>
    <fullName>simplesms__Number_Lookup_Success</fullName>
    <columns>NAME</columns>
    <columns>simplesms__Phone_Number__c</columns>
    <columns>simplesms__Number_Type__c</columns>
    <columns>simplesms__Carrier_Name__c</columns>
    <columns>simplesms__Last_Lookup_Date__c</columns>
    <columns>simplesms__Expiration_Date__c</columns>
    <columns>simplesms__DoNotSMS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>simplesms__Status__c</field>
        <operation>equals</operation>
        <value>Success</value>
    </filters>
    <label>Successful Lookups</label>
</ListView>